# libe3

./: .gitignore  BRANCH_HISTORY.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS  LICENSE  README.md  README_8md.html  SECURITY.md  annotated.html  annotated_dup.js  asn1__encoder_8cpp.html  asn1__encoder_8cpp_source.html  asn1__encoder_8hpp.html  asn1__encoder_8hpp.js  asn1__encoder_8hpp_source.html  build_libe3  c__api_8cpp.html  c__api_8cpp.js  c__api_8cpp_source.html  c__api_8h.html  c__api_8h.js  c__api_8h_source.html  classes.html  classlibe3_1_1Asn1E3Encoder-members.html  classlibe3_1_1Asn1E3Encoder.html  classlibe3_1_1Asn1E3Encoder.js  classlibe3_1_1DAppSubscriptionState-members.html  classlibe3_1_1DAppSubscriptionState.html  classlibe3_1_1DAppSubscriptionState.js  classlibe3_1_1E3Agent-members.html  classlibe3_1_1E3Agent.html  classlibe3_1_1E3Agent.js  classlibe3_1_1E3Connector-members.html  classlibe3_1_1E3Connector.html  classlibe3_1_1E3Connector.js  classlibe3_1_1E3Encoder-members.html  classlibe3_1_1E3Encoder.html  classlibe3_1_1E3Encoder.js  (+322 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  new_sm.yml  question.yml
.github/workflows/: commit-trailers.yml  e2e-dapp-test.yml  e2e-topologies.yml  full-loop-bench.yml  mirror.yml  mpmc-bench.yml  pr-tests.yml  tag-and-release.yml
cmake/: libe3.pc.in  libe3Compiler.cmake  libe3Config.cmake.in  libe3Dependencies.cmake  libe3Docs.cmake  libe3Examples.cmake  libe3Install.cmake  libe3Options.cmake  libe3SWIG.cmake  libe3Sources.cmake  libe3Targets.cmake  libe3Tests.cmake  libe3Version.cmake  libe3_version.hpp.in
docs/: Doxyfile.in
examples/: simple_agent.cpp  simple_dapp.cpp  simple_service_model.cpp  simulation_mode.cpp
examples/sm_simple/: CMakeLists.txt  e3sm_simple.asn  e3sm_simple.proto  e3sm_simple_wrapper.cpp  e3sm_simple_wrapper.hpp  simple_service_model.hpp
include/: libe3.hpp
include/libe3/: c_api.h  dapp_subscription_state.hpp  e3_agent.hpp  e3_connector.hpp  e3_encoder.hpp  e3_interface.hpp  error_codes.h  latency.hpp  libe3.hpp  lockfree_queue.hpp  logger.hpp  mpmc_queue.hpp  response_queue.hpp  sm_interface.hpp  subscription_manager.hpp  types.hpp  wp_rwlock.hpp
messages/: CMakeLists.txt
messages/asn1/V1/: e3ap-1.0.0.asn1  e3ap-1.0.0.cmake
messages/proto/V1/: e3ap-1.0.0.proto
scripts/: check_commit_trailers.py  create_deb.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  defines_1.js  (+91 more)
src/: c_api.cpp
src/connector/: connector_factory.cpp  posix_connector.cpp  posix_connector.hpp  zmq_connector.cpp  zmq_connector.hpp
src/core/: e3_agent.cpp  e3_interface.cpp  latrec.h  response_queue.cpp  sm_registry.cpp  subscription_manager.cpp
src/encoder/: asn1_encoder.cpp  asn1_encoder.hpp  e3_encoder.cpp  encoder_factory.cpp  json_encoder.cpp  json_encoder.hpp  protobuf_encoder.cpp  protobuf_encoder.hpp
swig/: README.md  e3_dapp_session.cpp  e3_dapp_session.hpp  libe3.i  libe3_swig.hpp
tests/: bench_mpmc_queue.cpp  test_asn1_size.cpp  test_dapp_subscription_state.cpp  test_e2e_report_path.cpp  test_e3_agent.cpp  test_e3_config_role.cpp  test_e3_interface.cpp  test_error_codes.cpp  test_framework.hpp  test_json_encoder.cpp  test_lockfree_queue.cpp  test_mpmc_queue.cpp  test_multi_agent_registry.cpp  test_protobuf_encoder.cpp  test_report_drop.cpp  test_response_queue.cpp  test_role_aware_connector_posix.cpp  test_role_aware_connector_zmq.cpp  test_setup_bad_request.cpp  test_subscription_manager.cpp  test_swig_smoke.py  test_types.cpp
tests/integration/: bench_encoding_size.cpp  bench_full_loop_latency.cpp  test_multi_peer_dispatch.cpp  test_role_pair_posix.cpp  test_role_pair_zmq_ipc.cpp  test_simple_sm_modes.cpp
